# devgate

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PLAN.md
src/devgate/: __init__.py  __main__.py  cli.py  config.py  core.py  errors.py  ports.py  remote.py  ssh.py  state.py  sync.py  terminal.py
src/devgate/templates/agents/claude/: CLAUDE.md
src/devgate/templates/agents/codex/: AGENTS.md
src/devgate/templates/agents/devgate/: SKILL.md
src/devgate/templates/agents/generic/: README.md
tests/: test_cli.py  test_config.py  test_ports.py  test_sync.py
