[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "devgate"
version = "0.1.0"
description = "A localhost gateway for remote development."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Daniel Burkhardt" }
]
keywords = ["ssh", "mosh", "remote-development", "cli", "localhost", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: System :: Networking",
  "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/dburkhardt/devgate"
Repository = "https://github.com/dburkhardt/devgate"
Issues = "https://github.com/dburkhardt/devgate/issues"

[project.scripts]
dvg = "devgate.cli:main"
devgate = "devgate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devgate"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
